--- a/ui/profile_form.ui
+++ b/ui/profile_form.ui
@@ -16,7 +16,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="IdLabel">
+  <widget class="QLabel" name="idLabel">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -25,6 +25,11 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+	font-size: 20px;
+}</string>
+   </property>
    <property name="text">
     <string>0000</string>
    </property>
@@ -32,7 +37,7 @@
     <enum>Qt::PlainText</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="NameLabel">
+  <widget class="QLabel" name="nameLabel">
    <property name="geometry">
     <rect>
      <x>80</x>
@@ -40,6 +45,11 @@
      <width>491</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+	font-size: 20px;
+}</string>
    </property>
    <property name="text">
     <string>Fulano Pepito Pérez de Tal</string>
@@ -96,7 +106,7 @@
     <enum>QFrame::Sunken</enum>
    </property>
    <property name="currentIndex">
-    <number>2</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="page_1">
     <widget class="QFrame" name="photoFrame">
@@ -133,14 +143,22 @@
         <height>16</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel {
+    color: palette(highlight);
+}</string>
+      </property>
       <property name="frameShape">
-       <enum>QFrame::Box</enum>
+       <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Sunken</enum>
       </property>
       <property name="text">
        <string>enlace</string>
+      </property>
+      <property name="openExternalLinks">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QPushButton" name="importPhotoPushButton">
@@ -365,8 +383,13 @@
         <height>16</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel {
+    color: palette(highlight);
+}</string>
+      </property>
       <property name="frameShape">
-       <enum>QFrame::Box</enum>
+       <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Sunken</enum>
@@ -414,7 +437,7 @@
        </rect>
       </property>
       <property name="frameShape">
-       <enum>QFrame::Box</enum>
+       <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Sunken</enum>
@@ -676,9 +699,9 @@
      <widget class="QDateEdit" name="dateEdit">
       <property name="geometry">
        <rect>
-        <x>140</x>
+        <x>100</x>
         <y>20</y>
-        <width>101</width>
+        <width>111</width>
         <height>25</height>
        </rect>
       </property>
@@ -691,12 +714,15 @@
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>121</width>
-        <height>16</height>
+        <width>71</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="text">
        <string>Fecha de nacimiento</string>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QLabel" name="ageLabel">
@@ -704,12 +730,12 @@
        <rect>
         <x>250</x>
         <y>20</y>
-        <width>71</width>
+        <width>61</width>
         <height>21</height>
        </rect>
       </property>
       <property name="frameShape">
-       <enum>QFrame::Box</enum>
+       <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Sunken</enum>
@@ -732,6 +758,19 @@
       </property>
       <property name="text">
        <string>Municipio</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>20</y>
+        <width>49</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Edad:</string>
       </property>
      </widget>
     </widget>
@@ -1996,238 +2035,13 @@
     </widget>
    </widget>
    <widget class="QWidget" name="page_3">
-    <widget class="QFrame" name="occupationFrame">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>931</width>
-       <height>111</height>
-      </rect>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <widget class="QLabel" name="label_53">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>71</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Ocupación</string>
-      </property>
-     </widget>
-     <widget class="QWidget" name="gridLayoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>911</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="2">
-        <widget class="QRadioButton" name="occ3RadioButton">
-         <property name="text">
-          <string>Desempleado en búsqueda de trabajo</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QRadioButton" name="occ1RadioButton">
-         <property name="text">
-          <string>Estudio</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QRadioButton" name="occ4RadioButton">
-         <property name="text">
-          <string>Estudio y trabajo</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QRadioButton" name="occ2RadioButton">
-         <property name="text">
-          <string>Tengo un emprendimiento</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="3">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QRadioButton" name="otherOccupationRadioButton">
-           <property name="text">
-            <string>Otra:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="otherOccupationLineEdit"/>
-         </item>
-        </layout>
-       </item>
-       <item row="1" column="2">
-        <widget class="QRadioButton" name="occ5RadioButton">
-         <property name="text">
-          <string>Labores del hogar</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QRadioButton" name="occ6RadioButton">
-         <property name="text">
-          <string>Trabajo</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QRadioButton" name="occ7RadioButton">
-         <property name="text">
-          <string>Estudio y emprendo</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </widget>
-    <widget class="QFrame" name="currentJobFrame">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>130</y>
-       <width>931</width>
-       <height>151</height>
-      </rect>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <widget class="QLabel" name="label_54">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>221</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Trabajo actual</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="companyLineEdit">
-      <property name="geometry">
-       <rect>
-        <x>110</x>
-        <y>30</y>
-        <width>281</width>
-        <height>24</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_55">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>101</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Nombre empresa</string>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="sectorComboBox">
-      <property name="geometry">
-       <rect>
-        <x>450</x>
-        <y>30</y>
-        <width>221</width>
-        <height>24</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_56">
-      <property name="geometry">
-       <rect>
-        <x>410</x>
-        <y>30</y>
-        <width>49</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Sector</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_57">
-      <property name="geometry">
-       <rect>
-        <x>700</x>
-        <y>30</y>
-        <width>31</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Rol</string>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="rolComboBox">
-      <property name="geometry">
-       <rect>
-        <x>730</x>
-        <y>30</y>
-        <width>191</width>
-        <height>24</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPlainTextEdit" name="jobDescriptionPlainTextEdit">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>80</y>
-        <width>911</width>
-        <height>61</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_58">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>60</y>
-        <width>231</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Descripción del rol en la empresa o sector</string>
-      </property>
-     </widget>
-    </widget>
     <widget class="QFrame" name="experienceFrame">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>290</y>
-       <width>321</width>
-       <height>111</height>
+       <y>50</y>
+       <width>541</width>
+       <height>81</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -2255,7 +2069,7 @@
         <x>10</x>
         <y>30</y>
         <width>101</width>
-        <height>31</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="text">
@@ -2268,22 +2082,25 @@
      <widget class="QLabel" name="label_61">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>70</y>
-        <width>121</width>
-        <height>16</height>
+        <x>380</x>
+        <y>30</y>
+        <width>81</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="text">
        <string>Años de experiencia</string>
       </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
      </widget>
      <widget class="QComboBox" name="expSectorComboBox">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>110</x>
         <y>40</y>
-        <width>181</width>
+        <width>261</width>
         <height>24</height>
        </rect>
       </property>
@@ -2291,55 +2108,19 @@
      <widget class="QComboBox" name="expYearsComboBox">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>70</y>
-        <width>181</width>
+        <x>450</x>
+        <y>40</y>
+        <width>81</width>
         <height>24</height>
        </rect>
       </property>
      </widget>
     </widget>
-    <widget class="QLabel" name="label_62">
-     <property name="geometry">
-      <rect>
-       <x>350</x>
-       <y>290</y>
-       <width>81</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Perfil laboral</string>
-     </property>
-    </widget>
-    <widget class="QPlainTextEdit" name="profilePlainTextEdit">
-     <property name="geometry">
-      <rect>
-       <x>350</x>
-       <y>310</y>
-       <width>591</width>
-       <height>121</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="improveProfilePushButton">
-     <property name="geometry">
-      <rect>
-       <x>840</x>
-       <y>440</y>
-       <width>101</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Mejorar con IA</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_63">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>410</y>
+       <x>500</x>
+       <y>10</y>
        <width>49</width>
        <height>16</height>
       </rect>
@@ -2351,8 +2132,8 @@
     <widget class="QLineEdit" name="linkedInLineEdit">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>410</y>
+       <x>560</x>
+       <y>10</y>
        <width>271</width>
        <height>24</height>
       </rect>
@@ -2361,8 +2142,8 @@
     <widget class="QPushButton" name="viewLinkedInPushButton">
      <property name="geometry">
       <rect>
-       <x>229</x>
-       <y>440</y>
+       <x>840</x>
+       <y>10</y>
        <width>101</width>
        <height>24</height>
       </rect>
@@ -2370,6 +2151,218 @@
      <property name="text">
       <string>Ver LinkedIn</string>
      </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>10</y>
+       <width>391</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="editable">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_53">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>71</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Ocupación</string>
+     </property>
+    </widget>
+    <widget class="QFrame" name="frame">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>140</y>
+       <width>541</width>
+       <height>331</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <widget class="QPlainTextEdit" name="profilePlainTextEdit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>521</width>
+        <height>271</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_62">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>81</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Perfil laboral</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>20</y>
+        <width>111</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Mejorar con IA</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QFrame" name="currentJobFrame">
+     <property name="geometry">
+      <rect>
+       <x>560</x>
+       <y>50</y>
+       <width>381</width>
+       <height>421</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <widget class="QLabel" name="label_54">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>221</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Trabajo actual</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="companyLineEdit">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>30</y>
+        <width>261</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_55">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Nombre empresa</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="sectorComboBox">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>60</y>
+        <width>311</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_56">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Sector</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_57">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>90</y>
+        <width>31</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Rol</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="rolComboBox">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>90</y>
+        <width>131</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="jobDescriptionPlainTextEdit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>140</y>
+        <width>361</width>
+        <height>271</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_58">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>120</y>
+        <width>231</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Descripción del rol en la empresa o sector</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>110</y>
+        <width>111</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Mejorar con IA</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
@@ -2399,7 +2392,7 @@
     <string>Anterior</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="navigationLabel">
    <property name="geometry">
     <rect>
      <x>470</x>
