--- a/ui/profile_form.ui
+++ b/ui/profile_form.ui
@@ -106,7 +106,7 @@
     <enum>QFrame::Sunken</enum>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="page_1">
     <widget class="QFrame" name="photoFrame">
@@ -638,7 +638,7 @@
       <string>Nombres y apellidos</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="completeNameLineEdit">
+    <widget class="QLineEdit" name="fullNameLineEdit">
      <property name="geometry">
       <rect>
        <x>140</x>
