Show editable occupation combobox field

--- a/ui/profile_form.ui
+++ b/ui/profile_form.ui
@@ -2152,7 +2152,7 @@
       <string>Ver LinkedIn</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="comboBox">
+    <widget class="QComboBox" name="occupationComboBox">
      <property name="geometry">
       <rect>
        <x>80</x>
