--- a/ui/profile_form.ui
+++ b/ui/profile_form.ui
@@ -106,7 +106,7 @@
     <enum>QFrame::Sunken</enum>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="page_1">
     <widget class="QFrame" name="photoFrame">
@@ -700,7 +700,7 @@
        </rect>
       </property>
      </widget>
-     <widget class="QDateEdit" name="dateEdit">
+     <widget class="QDateEdit" name="birthDateEdit">
       <property name="geometry">
        <rect>
         <x>100</x>
